--- a/litreview.bib
+++ b/litreview.bib
@@ -270,3 +270,16 @@
 	pages = {1--11},
 	file = {Subashini and Kavitha - 2011 - A survey on security issues in service delivery mo.pdf:/Users/anthony/Library/Application Support/Zotero/Profiles/ej4g1ifd.default/zotero/storage/KC8W6CRX/Subashini and Kavitha - 2011 - A survey on security issues in service delivery mo.pdf:application/pdf}
 }
+
+
+@article{dash_survey_2010,
+    title = {A survey on applications of wireless sensor network using cloud computing},
+    volume = {1},
+    url = {http://ijcset.excelingtech.co.uk/vol1issue4/10-vol1issue4.pdf},
+    number = {4},
+    urldate = {2017-01-25},
+    journal = {International Journal of Computer science \& Engineering Technologies (E-ISSN: 2044-6004)},
+    author = {Dash, Sanjit Kumar and Mohapatra, Subasish and Pattnaik, Prasant Kumar},
+    year = {2010},
+    pages = {50--55}
+}
